--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,21 +1,18 @@
-<h1>Vous pouvez trouver tous nos produits ci-dessous </h1>
-
-
-  <div class="row row-cols-4 row-cols-md-3 col-sm-12 p-md-0 m-md-0 d-flex justify-content-center">
-
-  <div class="card-group mb-5" >
-
-
+<div class="row text-center">
 <% @items.each do |item| %>
-
-  <div class="row row-cols-4 row-cols-md-3 col-sm-12 p-md-0 m-md-0 d-flex justify-content-center">
-
-  <div class="card" style="width: 18rem;" >
-  <img class="card-img-top" src= <%=  item.image_url %>
-  <div class="card-body">
-      <h5 class="card-title"> <%= item.title %> </h5>
-    <p class="card-text"><%= item.price %> € </p>
-    <a href="<%= item_path(item.id) %>" class="btn btn-primary" >Voir plus </a>
+<div class="col-lg-3 col-md-6 mb-4">
+  <div class="card shadow bg-white ">
+    <img class="card-img-top" src="<%= item.image_url %>" alt="">
+    <div class="card-body">
+      <h4 class="card-title"><%= item.title %></h4>
+      
+      <p><%= item.price %>€</p>
+    </div>
+    <div class="card-footer">
+      <%= link_to "Acheter", item_path(item.id), class: "btn btn-primary" %>
+    </div>
   </div>
 </div>
- <% end %>
+<% end %>
+
+</div>
